--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiro Projeto CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Este H1 terá fonte no tamanho 20</h1>
+    <h2>Este H2 terá cor vermelha </h2>
+    <p>Este parágrafo terá a margem esquerda de 50 pixels. </p>
     
 </body>
 </html>
