add comentario no codigo

--- a/27/02/index.html
+++ b/27/02/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- h1 é uma tag de maior titulo -->
     <h1>Este H1 terá fonte no tamanho 20</h1>
+
+    <!-- h2 é uma tag de segundo maior titulo  -->
     <h2>Este H2 terá cor vermelha </h2>
+    
+    <!-- p é uma tag de paragrafo -->
     <p>Este parágrafo terá a margem esquerda de 50 pixels. </p>
     
 </body>
